--- a/DDAYGO/ViewController/My/Supplier/Supplier1ViewController.xib
+++ b/DDAYGO/ViewController/My/Supplier/Supplier1ViewController.xib
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Supplier1ViewController">
             <connections>
                 <outlet property="LocationLabel" destination="xPu-zy-3JE" id="nIt-CD-dbk"/>
+                <outlet property="noStoreView" destination="oiP-Bo-vtV" id="rAR-NN-Uzn"/>
+                <outlet property="sendingBtn" destination="OCf-Qe-LaU" id="EYy-Y2-ZQp"/>
                 <outlet property="tableView" destination="bX2-oZ-Mr7" id="8hQ-x9-ySB"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -97,17 +100,63 @@
                         </constraints>
                     </view>
                 </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oiP-Bo-vtV">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_business_fail" translatesAutoresizingMaskIntoConstraints="NO" id="FIE-Cf-npt">
+                            <rect key="frame" x="130" y="112" width="60" height="60"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="60" id="Qi4-eI-CKG"/>
+                                <constraint firstAttribute="height" constant="60" id="zpP-jg-d96"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="test" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fkq-VJ-6Bx">
+                            <rect key="frame" x="145.5" y="180" width="29.5" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.4756349325" green="0.47564673419999998" blue="0.47564041610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OCf-Qe-LaU">
+                            <rect key="frame" x="20" y="411" width="280" height="30"/>
+                            <color key="backgroundColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="phb-wY-RcW"/>
+                            </constraints>
+                            <state key="normal" title="重新申请">
+                                <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="requstAction:" destination="-1" eventType="touchUpInside" id="ii2-O4-R9Z"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="OCf-Qe-LaU" firstAttribute="leading" secondItem="oiP-Bo-vtV" secondAttribute="leading" constant="20" id="2s8-cc-I9M"/>
+                        <constraint firstItem="Fkq-VJ-6Bx" firstAttribute="top" secondItem="FIE-Cf-npt" secondAttribute="bottom" constant="8" id="HNX-Nh-MPK"/>
+                        <constraint firstItem="Fkq-VJ-6Bx" firstAttribute="centerX" secondItem="FIE-Cf-npt" secondAttribute="centerX" id="Ian-Z3-ggH"/>
+                        <constraint firstItem="OCf-Qe-LaU" firstAttribute="centerY" secondItem="oiP-Bo-vtV" secondAttribute="centerY" multiplier="1.5" id="R85-wd-3mn"/>
+                        <constraint firstAttribute="trailing" secondItem="OCf-Qe-LaU" secondAttribute="trailing" constant="20" id="r4X-Vs-dUr"/>
+                        <constraint firstItem="FIE-Cf-npt" firstAttribute="centerX" secondItem="oiP-Bo-vtV" secondAttribute="centerX" id="suu-0v-lxv"/>
+                        <constraint firstItem="FIE-Cf-npt" firstAttribute="centerY" secondItem="oiP-Bo-vtV" secondAttribute="centerY" multiplier="0.5" id="xwN-Pt-xyF"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="oiP-Bo-vtV" secondAttribute="bottom" id="5Cb-iY-rhF"/>
+                <constraint firstItem="oiP-Bo-vtV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="5ky-Zx-2ah"/>
                 <constraint firstAttribute="bottom" secondItem="bX2-oZ-Mr7" secondAttribute="bottom" id="BZQ-Zq-tdB"/>
                 <constraint firstAttribute="trailing" secondItem="bX2-oZ-Mr7" secondAttribute="trailing" id="GWM-1S-yOz"/>
+                <constraint firstItem="oiP-Bo-vtV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="VZb-D1-sNd"/>
                 <constraint firstItem="bX2-oZ-Mr7" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="fSx-JU-pjk"/>
                 <constraint firstItem="bX2-oZ-Mr7" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="fef-jF-KQu"/>
+                <constraint firstAttribute="trailing" secondItem="oiP-Bo-vtV" secondAttribute="trailing" id="lOT-za-m82"/>
             </constraints>
         </view>
     </objects>
     <resources>
         <image name="icon_business_country" width="19" height="19"/>
+        <image name="img_business_fail" width="81" height="81"/>
     </resources>
 </document>
