商家申请界面编辑

--- a/DDAYGO/ViewController/My/Supplier/SupplierCell/SupplierTableViewCell.xib
+++ b/DDAYGO/ViewController/My/Supplier/SupplierCell/SupplierTableViewCell.xib
@@ -35,6 +35,9 @@
                         <nil key="textColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
+                        <connections>
+                            <outlet property="delegate" destination="KGk-i7-Jjw" id="kXs-Yn-erl"/>
+                        </connections>
                     </textField>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
