--- a/DDAYGO/ViewController/My/MyHomePage/Base.lproj/MyViewController.xib
+++ b/DDAYGO/ViewController/My/MyHomePage/Base.lproj/MyViewController.xib
@@ -248,8 +248,8 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="申请成功" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N31-ty-HnO">
-                                            <rect key="frame" x="154" y="8" width="61.5" height="33"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N31-ty-HnO">
+                                            <rect key="frame" x="154" y="8" width="0.0" height="33"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="33" id="vFa-vs-LiF"/>
                                             </constraints>
@@ -258,7 +258,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=")" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="58r-Uf-XLQ">
-                                            <rect key="frame" x="216" y="8" width="6.5" height="33"/>
+                                            <rect key="frame" x="154.5" y="8" width="6.5" height="33"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="33" id="Pca-Sv-1cu"/>
                                             </constraints>
