--- a/DDAYGO/ViewController/My/Setting/ReceivingAddress/Edit/EditViewController.xib
+++ b/DDAYGO/ViewController/My/Setting/ReceivingAddress/Edit/EditViewController.xib
@@ -123,8 +123,8 @@
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="台灣" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="prW-Ch-y1G">
-                                    <rect key="frame" x="255" y="110" width="35" height="34"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="prW-Ch-y1G">
+                                    <rect key="frame" x="290" y="110" width="0.0" height="34"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="34" id="MPk-x8-hrh"/>
                                     </constraints>
