--- a/DDAYGO/ViewController/My/Setting/ReceivingAddress/NewAddress/AddAddressViewController.xib
+++ b/DDAYGO/ViewController/My/Setting/ReceivingAddress/NewAddress/AddAddressViewController.xib
@@ -123,8 +123,8 @@
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="台灣" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5fc-g0-gY9">
-                                    <rect key="frame" x="309" y="110" width="35" height="35"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5fc-g0-gY9">
+                                    <rect key="frame" x="344" y="110" width="0.0" height="35"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="35" id="Tre-eb-fkN"/>
                                     </constraints>
